src/objects/MessageInformation__c.object
<CustomObject>
    <fields>
        <fullName>MessageCode__c</fullName>
        <label>MessageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageDtTime__c</fullName>
        <label>MessageDtTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MessageHelpUrl__c</fullName>
        <label>MessageHelpUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MessageLevel__c</fullName>
        <label>MessageLevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warn</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MessageSub1__c</fullName>
        <description>補助情報1</description>
        <label>MessageSub1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageType__c</fullName>
        <label>MessageType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>予約取込</fullName>
                </value>
                <value>
                    <fullName>在庫調整</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MessageUUID__c</fullName>
        <label>MessageUUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <label>MessageInformation</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>